--- a/style.css
+++ b/style.css
@@ -1,11 +1,89 @@
-body{
-    background-color: black;
+#btn {
+
+    color: black;
+    height: 30px;
+    width: 100px;
+    background-color: transparent;
+    border-color: black;
+    border-radius: 7px;
+    border-style: double;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
+#doubleclick {
+
+    color: black;
+    height: 30px;
+    width: 200px;
+    background-color: transparent;
+    border-color: black;
+    border-radius: 7px;
+    border-style: double;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+
 }
 
-.text-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+#tripleclick {
+
+    color: black;
+    height: 30px;
+    width: 200px;
+    background-color: transparent;
+    border-color: black;
+    border-radius: 7px;
+    border-style: double;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#totalclicks {
     font-family: 'Courier New', Courier, monospace;
-  }
+}
+
+#reset {
+
+    color: black;
+    height: 30px;
+    width: 200px;
+    background-color: transparent;
+    border-color: black;
+    border-radius: 7px;
+    border-style: double;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+body {
+    background: rgb(255,25,0);
+    background: linear-gradient(90deg, rgba(255,25,0,1) 0%, rgba(206,255,0,1) 100%);
+}
+
+#div1 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+}
+
+#div2 {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+}
+
+#div3 {
+    position: fixed;
+    top: 55%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+}
